--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cobidev/simplefolio"
+    "url": "git+https://github.com/rebeccachavezlv/simplefolio"
   },
   "keywords": [],
   "author": "Jacobo Martinez",
